[gd_scene load_steps=3 format=3 uid="uid://cgwciolgnoos0"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_dgmy7"]
[ext_resource type="AudioStream" uid="uid://dy4o3nfg5i4e5" path="res://assets/sounds/sfx_hurt.ogg" id="2_rdrva"]

[node name="Killzone" type="Area2D"]
script = ExtResource("1_dgmy7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="FallAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rdrva")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
